# Picinae

./: #memset_arm_proofs.v#  .gitignore  BapInterp.v  BapStatics.v  BapSyntax.v  Bap_ARM_32.v  Bap_i386.v  Bap_x86_64.v  Bilopt.v  Etacs.v  Index.v  Looping.v  Makefile  Ntree.v  Picinae_ISA.v  Picinae_SMC.v  Picinae_amd64.v  Picinae_armv7.v  Picinae_armv7_lifter.v  Picinae_armv8.v  Picinae_armv8_pcode.v  Picinae_auto.v  Picinae_calling.v  Picinae_calling_int.v  Picinae_core.v  Picinae_ebpf_pcode.v  Picinae_fault_tolerance.v  Picinae_finterp.v  Picinae_i386.v  Picinae_memsolve.v  Picinae_numbers.v  Picinae_pilbox32.v  Picinae_pilbox32_interpreter.v  Picinae_riscv.v  Picinae_riscv_encode.v  Picinae_simplifier.v  Picinae_simplifier_base.v  Picinae_simplifier_exps.v  Picinae_simplifier_v0.v  Picinae_simplifier_v1_0.v  (+55 more)
Examples/: .Makefile.d  5.v  Makefile.conf  _CoqProject  arm7_cfi.v  arm7_cfi2.v  arm7_cfi_proof.v  arm7_cfi_proofs.v  arm7_cfi_safety.v  arm7_collatz_smc.v  arm7_collatz_smc_proof.v  arm7_memset.v  arm7_memset_proof.v  arm7_strlen.v  arm7_strlen_proof.v  arm8_project_template.v  arm8_strcasecmp.v  arm8_strcasecmp_proof.v  arm8_strspn.v  arm8_strspn_lemmas.v  arm8_strspn_proof.v  ebpf_arith.v  ebpf_arith_proof.v  i386_strcmp.v  i386_strcmp_proof.v  i386_strlen_proof.v  i386_wcsnlen.v  i386_wcsnlen_proof.v  (+17 more)
examples/: dune  riscv_cfi.v
examples/arm/: arm7_memset.v  arm7_memset_proof.v  arm7_strlen.v  arm7_strlen_proof.v  arm8_strcasecmp.v  arm8_strcasecmp_proof.v
examples/i386/: strcmp.v  strcmp_proof.v  strlen.v  strlen_proof.v  wcsspn.v  wcsspn_proof.v
(+487 files in other folders)
